[project]
name = "blinkliveview"
version = "0.1.0"
description = "Command line tool for playing live streams from Blink cameras using ffplay"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "aiofiles>=25.1.0",
    "aiohttp>=3.13.3",
    "blinkpy>=0.25.3",
]

[project.scripts]
blinklive = "blinkliveview.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
